1Preview, 2Records, 3SealedClasses.