@@ -17,3 +17,7 @@ dependencies {
 test {
     useJUnitPlatform()
 }
+
+compileJava {
+    options.compilerArgs += ['--enable-preview']
+}
